# dagobert

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA_FLOW.md  README.md  Trading Introduction.pptx  environment.yml  pyproject.toml
.github/workflows/: ci.yml
Learning_Materials/: tutorial.ipynb
data/: forex_indicators.parquet  forex_indicators_latest.csv  forex_indicators_smoke.csv  forex_indicators_smoke_latest.csv
docs/: PROJECT_STRUCTURE.md
notebooks/: exploration.ipynb
notebooks_testing/: basic data generation.ipynb
raw_data/: EURUSD_M15_2024-2026.csv
scripts/: render_data_flow_charts.py
src/trader/: __init__.py  alpaca.py  backtest.py  backtest_report.py  cli.py  config.py  dashboard.py  data_sources.py  indicators.py  mt5.py  pipeline.py  research.py  risk.py  strategies.py  sweep.py  sweep_report.py
tests/: test_alpaca.py  test_backtest_report.py  test_config.py  test_dashboard.py  test_mt5.py  test_pipeline.py  test_research.py  test_risk.py  test_strategies_backtest.py  test_sweep.py
