[tool.poetry]
name = "trader"
version = "0.2.0"
description = "Research workbench for US equities and crypto via Alpaca: data, indicators, signals, backtests."
authors = ["Fabian"]
readme = "README.md"
packages = [{ include = "trader", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.2.5"
pandas = "^2.2.3"
pyarrow = "^19.0.1"
python-dotenv = "^1.0"
ta = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.6"
mypy = "^1.11"

[tool.poetry.group.alpaca.dependencies]
alpaca-py = "^0.43.0"

[tool.poetry.group.docs.dependencies]
matplotlib = "^3.9"

[tool.poetry.scripts]
trader = "trader.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["Learning_Materials", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",      # line length handled by formatter
    "RUF001",    # ambiguous unicode in strings — project text is German/uses × etc.
    "RUF003",    # same, but in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are fine

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
files = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
